ul navbar + sony logo padding

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 #sony-header{
     background-color: black;
+    text-align: right;
 }
 
 .my_sony-logo{
     width: 100px;
+    padding: 9px;
 }
 
 .returnal-bootstrap-box{
